Fix spacing when notices are inside #mailpoet_notices container
[MAILPOET-3284]

--- a/assets/css/src/components/_tabs.scss
+++ b/assets/css/src/components/_tabs.scss
@@ -13,7 +13,8 @@
   .error ~ &,
   .error ~ div > &,
   .error ~ .wrap &,
-  .mailpoet-subscribers-in-plan ~ & {
+  .mailpoet-subscribers-in-plan ~ &,
+  #mailpoet_notices:not(:empty) ~ div > & {
     top: 0 !important;
   }
 
